# portfolio-batchElt

./: .gitignore  README.md  pyproject.toml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/gold/: gold_daily_metrics_by_borough.sql  gold_hourly_metrics.sql
dbt_project/models/silver/: schema.yml  silver_taxi_trips.sql
dlt_sources/: fhv_taxi_data.py  green_taxi_data.py  jsonplaceholder_users.py  nyc_taxi_data.py  utils.py
src/portfolio_batchelt/: assets.py  assets_bronze.py  assets_dbt.py  assets_dlt.py  assets_gold.py  assets_silver.py  assets_viz.py  definitions.py
