[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio_batchelt"
version = "0.0.1"
authors = [
  { name="Alonso Burón", email="alonso.buron@proton.me" },
]
description = "NYC Taxi Analytics Pipeline - 5D Stack implementation with medallion architecture"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-dlt",
    "dagster-dbt",
    "dlt[duckdb]",
    "dagster-duckdb",
    "dbt-duckdb",
    "pandas",
    "pyarrow",
    "tzdata",
    "plotly",
    "statsmodels"
]

[tool.dagster]
module_name = "src.portfolio_batchelt.definitions"
